tentative fix by reverting z-index change for fotorama and modal control overlap issue

--- a/Magento_Theme/web/css/source/_module.less
+++ b/Magento_Theme/web/css/source/_module.less
@@ -844,7 +844,7 @@ aside.modal-popup.quickview-modal-popup.modal-slide._show{
         position: fixed;
 		max-width: 100%;
 		width: 100%;
-		z-index: 100000;
+		z-index: 1000;
 		min-height: 232px;
 		max-height: 232px;
         top: 0px;        
